--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="./src/favicon.ico">
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAM0ne3O06hDS08z8l2h_-8iJWh3mDZPFI&callback=initMap"/>
     <title>React App</title>
   </head>
   <body>
