--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="./src/favicon.ico">
-    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAM0ne3O06hDS08z8l2h_-8iJWh3mDZPFI&callback=initMap"/> -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAM0ne3O06hDS08z8l2h_-8iJWh3mDZPFI&libraries=places" async defer></script>
+    <style>
+      html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+      #map {
+        height: 100%;
+      }
+    </style>
     <title>React App</title>
   </head>
   <body>
