add material ui to search form, add validation for dates

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="./src/favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAM0ne3O06hDS08z8l2h_-8iJWh3mDZPFI&libraries=places" async defer></script>
     <style>
       html, body {
