--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="./src/favicon.ico">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAM0ne3O06hDS08z8l2h_-8iJWh3mDZPFI&libraries=places" async defer></script>
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
     <style>
       html, body {
         height: 100%;
@@ -16,7 +17,7 @@
         height: 100%;
       }
     </style>
-    <title>React App</title>
+    <title>Goings On</title>
   </head>
   <body>
     <div id="root"></div>
