--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="./src/favicon.ico">
+    <!-- <link rel="shortcut icon" href="./src/favicon.ico"> -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAM0ne3O06hDS08z8l2h_-8iJWh3mDZPFI&libraries=places" async defer></script>
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
